--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
         ::-webkit-scrollbar-thumb:hover {
           background: #94a3b8;
         }
+
+        /* Kart içi scrollbar - ayrı alanda görünsün */
+        .scrollbar-visible {
+          scrollbar-width: thin;
+          scrollbar-color: #cbd5e1 transparent;
+        }
+        .scrollbar-visible::-webkit-scrollbar {
+          height: 8px;
+        }
+        .scrollbar-visible::-webkit-scrollbar-track {
+          background: #f1f5f9;
+          border-radius: 4px;
+          margin: 0 8px;
+        }
+        .scrollbar-visible::-webkit-scrollbar-thumb {
+          background: #cbd5e1;
+          border-radius: 4px;
+        }
+        .scrollbar-visible::-webkit-scrollbar-thumb:hover {
+          background: #94a3b8;
+        }
     </style>
 <script type="importmap">
 {
